Fixes #464: horizontal align in apps menu.

--- a/usr/share/css/themes/elementary/elementary/desktop.css
+++ b/usr/share/css/themes/elementary/elementary/desktop.css
@@ -139,7 +139,6 @@ body {
 }
 #elementary-apps li .app-title {
 	height: 38px;
-	width: 80px;
 	overflow: hidden;
 }
 #elementary-apps li .app-description {
